--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.spinner {
+  margin-top: 50px;
+}
+.page {
+  margin-top: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+button,
+h1,
+h3 {
+  letter-spacing: 3px;
+}
+body {
+  background-color: aliceblue;
+  width: 100%;
+  height: 100%;
+}
+.container {
+  width: 700px;
+  margin: 40px auto;
+}
+.card {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-flow: row nowrap;
+  margin-bottom: 40px;
 }
-
-.App-link {
-  color: #61dafb;
+.card img {
+  width: 250px;
+  height: 200px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  object-fit: cover;
+  border: 4px solid lightblue;
+  border-radius: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar {
+  text-align: center;
+  margin-bottom: 40px;
+}
+.navbar h1 {
+  margin-bottom: 30px;
+  border-bottom: 4px solid lightblue;
+  padding-bottom: 10px;
+  border-bottom-style: dashed;
+}
+.navbar div button {
+  border: 3px solid lightblue;
+  padding: 5px 10px;
+  margin: 7px;
+  border-radius: 10px;
+  color: skyblue;
+  cursor: pointer;
+}
+.food {
+  width: 400px;
+  margin: 0 auto;
+}
+.food h3 {
+  border-bottom: 1px dashed darkgray;
+  padding-bottom: 5px;
+  margin-bottom: 20px;
+}
+.food p {
+  font-size: 17px;
+  line-height: 25px;
+  letter-spacing: 1px;
+  color: gray;
+}
+.food button {
+  margin-left: 30px;
 }
